@@ -36,6 +36,9 @@ Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
 (lots of major bugfixes too)
 @
 tbaMUD 3.6
+[Jul 25 2009] - Rumble
+  Fixed zedit_level to recognize changes and save properly.
+  Removed duplicate struct from db.h
 [Jul 04 2009] - Rumble
   added trigedit variable armor to return AC. (thanks Fizban)
   Fixed typo in do_advance PLR to PRF. (thanks Drefs)
